--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,6 @@
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
     "nodemon": "^3.0.1",
-    "openai": "^4.0.0",
+    "openai": "^4.0.0"
   }
 }
